# Distributed_GPU_LSH_using_SYCL

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/modules/: FindhipSYCL.cmake  GoogleTest.cmake
cmake/presets/: acpp.json  common.json  icpx.json
data_sets/: convert_arff_to_binary.py  generate_data.py
doc/: CMakeLists.txt  Doxyfile.in  dirs.dox
doc/resources/: dirs.dox
evaluation/: calculate_exact_nearest_neighbors.py  distribution.py
include/: argv_parser.hpp  config.hpp  data.hpp  entropy_based_hash_function.hpp  entropy_hash_function.hpp  evaluation.hpp  hash_function.hpp  hash_table.hpp  hash_table_old.hpp  knn.hpp  mpi_buffer.hpp  mpi_buffer_old.hpp  options.hpp  random_projection_hash_function.hpp  single_gpu_selector.hpp  single_gpu_selector_old.hpp
include/detail/: arithmetic_type_name.hpp  assert.hpp  convert.hpp  convert_old.hpp  mpi_type.hpp  print.hpp  print_old.hpp  source_location.hpp  timing.hpp  timing_old.hpp
include/dummy/: dummy.hpp
include/exceptions/: mpi_exception.hpp  mpi_file_exception.hpp
include/file_parser/: arff_parser.hpp  arff_parser_old.hpp  base_file_parser.hpp  base_parser.hpp  base_parser_old.hpp  default_mpi_parser.hpp  default_parser.hpp  file_parser.hpp  parser_factory.hpp
include/hash_functions/: entropy_based_hash_function.hpp  hash_function.hpp  hash_function_old.hpp  mixed_hash_function_old.hpp  random_projection_hash_function.hpp  random_projection_hash_function_old.hpp
include/sycl_lsh/: argv_parser.hpp  constants.hpp  core.hpp  data.hpp  data_attributes.hpp  data_set.hpp  device_selector.hpp  hash_function_types.hpp  hash_tables.hpp  knn.hpp  matrix.hpp  memory_layout.hpp  nearest_neighbors.hpp  nearest_neighbors_report.hpp  nearest_neighbors_result.hpp  options.hpp  profiler.hpp  profiling_types.hpp  shape.hpp
include/sycl_lsh/detail/: arithmetic_type_name.hpp  assert.hpp  conversion.hpp  defines.hpp  device_ptr.hpp  filesystem.hpp  fmt_chrono.hpp  get_linear_id.hpp  hash_combine.hpp  linear_id.hpp  lsh_hash.hpp  make_unique_for_overwrite.hpp  matrix.hpp  shape.hpp  sycl.hpp  utility.hpp
include/sycl_lsh/detail/hashing/: entropy_based.hpp  hash_combine.hpp  hash_tables.hpp  lsh_hash.hpp  mixed_hash_functions.hpp  random_projections.hpp
include/sycl_lsh/exceptions/: communicator_exception.hpp  exceptions.hpp  file_exception.hpp  not_implemented.hpp  not_implemented_exception.hpp  source_location.hpp  window_exception.hpp
include/sycl_lsh/hash_functions/: entropy_based.hpp  hash_function_types.hpp  hash_functions.hpp  mixed_hash_functions.hpp  random_projections.hpp
include/sycl_lsh/mpi/: communicator.hpp  environment.hpp  errhandler.hpp  file.hpp  file_parser_types.hpp  logger.hpp  main.hpp  math.hpp  sort.hpp  timer.hpp  type_cast.hpp
include/sycl_lsh/mpi/detail/: logging.hpp  math.hpp  sort.hpp  timer.hpp  type_cast.hpp  utility.hpp
include/sycl_lsh/mpi/detail/file_parser/: arff_parser.hpp  base_parser.hpp  binary_parser.hpp  file.hpp  file_parser.hpp
include/sycl_lsh/mpi/file_parser/: arff_parser.hpp  base_parser.hpp  binary_parser.hpp  file.hpp  file_parser.hpp  file_parser_types.hpp
src/: hash_table.cpp  main.cpp
src/cpu_tests/: hash_table.hpp
src/dummy/: dummy.cpp  normal.cpp  parallelism.cpp  template_functions.cpp
src/sycl_lsh/: argv_parser.cpp  data_attributes.cpp  data_set.cpp  device_selector.cpp  hash_function_types.cpp  knn.cpp  matrix.cpp  memory_layout.cpp  nearest_neighbors.cpp  nearest_neighbors_report.cpp  nearest_neighbors_result.cpp  options.cpp  profiler.cpp  profiling_types.cpp  shape.cpp
src/sycl_lsh/detail/: shape.cpp  sycl.cpp  utility.cpp
src/sycl_lsh/detail/hashing/: entropy_based.cpp  mixed_hash_functions.cpp  random_projections.cpp
src/sycl_lsh/exceptions/: communicator_exception.cpp  exceptions.cpp  file_exception.cpp  not_implemented_exception.cpp  source_location.cpp  window_exception.cpp
src/sycl_lsh/hash_functions/: entropy_based.cpp  hash_function_types.cpp  hash_functions.cpp  mixed_hash_functions.cpp  random_projections.cpp
src/sycl_lsh/mpi/: communicator.cpp  environment.cpp  errhandler.cpp  file.cpp  file_parser_types.cpp  logger.cpp  main.cpp  timer.cpp
src/sycl_lsh/mpi/detail/: timer.cpp  utility.cpp
src/sycl_lsh/mpi/detail/file_parser/: file.cpp
src/sycl_lsh/mpi/file_parser/: file.cpp  file_parser_types.cpp
test/: CMakeLists.txt  gtest-mpi-listener.hpp  main.cpp  test_main.cpp  test_utilities.hpp
test/argv_parser/: CMakeLists.txt  argv_as.cpp  construction.cpp  description.cpp  has_argv.cpp
test/data/: CMakeLists.txt  construction.cpp  copy_to_different_layout.cpp  data_set.txt  data_test_utilities.hpp  data_tests_utilities.hpp  indexing.cpp
test/dummy/: CMakeLists.txt  dummy.cpp
test/hash_functions/: CMakeLists.txt  construction.cpp  copy_to_different_layout.cpp  hash.cpp  indexing.cpp
test/knn/: CMakeLists.txt  construction.cpp  get_knn_ids.cpp  get_knn_points.cpp  save.cpp  saved_knn_aos.txt  saved_knn_soa.txt
test/options/: CMakeLists.txt  custom_options.txt  factory.cpp  options.cpp  saved_options.txt
tutorials/: exception_handling_doesnt_work.cpp  hello_world.cpp  reduction.cpp
utility_scripts/: calculate_exact_nearest_neighbors.py  convert_arff_to_binary.py  convert_libsvm_to_binary.py  plot_distributions.py  plot_hash_value_distribution.py  tune_parameter.py
